# sinewave-tinnitus-retraining

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  build-desktop.sh  build.rs  build.sh  rustfmt.toml
.cargo/: config.toml
sinewave_tinnitus_retraining/: .gitignore  .metadata  README.md  pubspec.yaml
sinewave_tinnitus_retraining/android/app/: build.gradle.kts
sinewave_tinnitus_retraining/android/app/src/main/: AndroidManifest.xml
sinewave_tinnitus_retraining/ios/Runner/: Info.plist
sinewave_tinnitus_retraining/ios/Runner.xcodeproj/: project.pbxproj
sinewave_tinnitus_retraining/lib/: audio_service.dart  audio_utils.dart  main.dart  platform_utils.dart  settings_controller.dart  settings_service.dart  tray_manager.dart  window_manager_wrapper.dart
sinewave_tinnitus_retraining/linux/: CMakeLists.txt
sinewave_tinnitus_retraining/linux/runner/: my_application.cc
sinewave_tinnitus_retraining/macos/: libsinewave_tinnitus_retraining_app.dylib
sinewave_tinnitus_retraining/macos/Flutter/: GeneratedPluginRegistrant.swift
sinewave_tinnitus_retraining/macos/Runner.xcodeproj/: project.pbxproj
sinewave_tinnitus_retraining/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
sinewave_tinnitus_retraining/test/: widget_test.dart
sinewave_tinnitus_retraining/web/: index.html  manifest.json
sinewave_tinnitus_retraining/windows/: CMakeLists.txt
sinewave_tinnitus_retraining/windows/runner/: Runner.rc  main.cpp
src/: audio.rs  lib.rs  oscillator.rs  taus88.rs
src/audio/: aaudio_backend.rs  cpal_backend.rs
(+4 files in other folders)
